F&GDEV/src/objects/Filing_Status__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>Actuarial_Memo_Variation_Description__c</fullName>
        <label>Actuarial Memo Variation Description</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Notes__c</fullName>
        <label>Approval Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compact_Situs_Approval_Date__c</fullName>
        <formula>IF(ISPICKVAL(Filing_Strategy__c, &quot;Compact Dependent&quot;)||ISPICKVAL(Filing_Strategy__c, &quot;Group Dependent&quot;) &amp;&amp; (NOT(ISPICKVAL( Filing_Status__c, &quot;Approved - Compact&quot;)) || NOT(ISPICKVAL( Filing_Status__c, &quot;Approved - Dependent Group&quot;))), Policy_Form__r.Compact_Situs_Approval_Date__c , null)</formula>
        <label>Compact/Situs Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Approve__c</fullName>
        <formula>State_Approval_Date__c - Submitted_to_State_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How long (in days) did this take to get approved?</inlineHelpText>
        <label>Days to Approve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deemed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deemed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent_Approval__c</fullName>
        <label>Dependent Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>ICC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Next_Response_Date__c</fullName>
        <label>Expected Next Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feature_Variation_Description__c</fullName>
        <inlineHelpText>Describe the variation detail that relates to the feature.</inlineHelpText>
        <label>Feature Variation Description</label>
        <length>131027</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>File_Date_To_Vendor__c</fullName>
        <label>File Date (To Vendor)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filing_Followup_Date__c</fullName>
        <label>Filing Followup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filing_Notes_Status_Notes__c</fullName>
        <inlineHelpText>Provide high-level comments for reporting purposes and for stakeholders to view quickly.</inlineHelpText>
        <label>Filing Notes Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filing_Notes__c</fullName>
        <inlineHelpText>Provide detailed filing notes for internal purposes. This field provides additional information that may not be necessary to view in exported reports.</inlineHelpText>
        <label>Filing Notes Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filing_Objection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filing Objection</label>
        <referenceTo>Filing_Objection__c</referenceTo>
        <relationshipLabel>Policy Form States</relationshipLabel>
        <relationshipName>Policy_Form_States</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Filing_Status__c</fullName>
        <label>Filing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Act Support</fullName>
                </value>
                <value>
                    <fullName>Filed</fullName>
                </value>
                <value>
                    <fullName>Objection</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Filing</fullName>
                </value>
                <value>
                    <fullName>Pending Compact</fullName>
                </value>
                <value>
                    <fullName>Pending Group</fullName>
                </value>
                <value>
                    <fullName>Approved - Dependent Group</fullName>
                </value>
                <value>
                    <fullName>Approved - Compact</fullName>
                </value>
                <value>
                    <fullName>Approved - Exempt</fullName>
                </value>
                <value>
                    <fullName>Approved - Dependent Compact</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Filed with DOI</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Targeted</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filing_Strategy__c</fullName>
        <label>Filing Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Filing</fullName>
                </value>
                <value>
                    <fullName>Compact Filing</fullName>
                </value>
                <value>
                    <fullName>Compact Dependent</fullName>
                </value>
                <value>
                    <fullName>Group Filing</fullName>
                </value>
                <value>
                    <fullName>Group Dependent</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>File &amp; Use</fullName>
                </value>
                <value>
                    <fullName>Not Filing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filing_Withdrawn_Date__c</fullName>
        <label>Filing Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Variation_Description__c</fullName>
        <inlineHelpText>Describe the variation detail that relates to the form.</inlineHelpText>
        <label>Form Variation Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Actuarial_Memo_Variation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are there changes that are required to be made by Actuarial?</inlineHelpText>
        <label>Is Actuarial Memo Variation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Feature_Variation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Substantial variation - change feature of rider but could be tied to the language that is minor and potentially tied to form variation or SOV variation; important in that it is related to consumer brochure or form approval history.</inlineHelpText>
        <label>Is Feature Variation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Form_Variation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The page itself different in the form (i.e. need to point to a different form based off of this type of variation).</inlineHelpText>
        <label>Is Form Variation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SOV_Variation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are there variability changes requested by state?</inlineHelpText>
        <label>Is SOV Variation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Min_Objection_Deadline_Date__c</fullName>
        <label>Min Objection Deadline Date</label>
        <summarizedField>Filing_Objection__c.Objection_Response_Required_By__c</summarizedField>
        <summaryFilterItems>
            <field>Filing_Objection__c.Objection_Response_Submitted__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Filing_Objection__c.Policy_Form_State__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Min_Response_Date__c</fullName>
        <label>Min Response Date</label>
        <summarizedField>Filing_Objection__c.Objection_Response_Submitted__c</summarizedField>
        <summaryFilterItems>
            <field>Filing_Objection__c.Objection_Response_Submitted__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Filing_Objection__c.Policy_Form_State__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Objection_Response_Date__c</fullName>
        <label>Most Recent Objection Response Date</label>
        <summarizedField>Filing_Objection__c.Objection_Received__c</summarizedField>
        <summaryForeignKey>Filing_Objection__c.Policy_Form_State__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Objections__c</fullName>
        <label>Number of Objections</label>
        <summaryForeignKey>Filing_Objection__c.Policy_Form_State__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Objection_Deadline_Date__c</fullName>
        <label>Current Objection Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objection_Received_Date__c</fullName>
        <label>Objection Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objection_Response_Date__c</fullName>
        <label>Most Recent Objection Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objections_Outstanding__c</fullName>
        <label>Objections Outstanding</label>
        <summaryFilterItems>
            <field>Filing_Objection__c.Objection_Response_Submitted__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Filing_Objection__c.Policy_Form_State__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Outstanding_Objections__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outstanding Objections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Form_Description__c</fullName>
        <formula>Policy_Form__r.Policy_Form_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Form Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Form_State__c</fullName>
        <formula>Policy_Form__r.Policy_Form_Name__c &amp;&quot; - &quot; &amp; TEXT( State__c )</formula>
        <label>Policy Form State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Form__c</fullName>
        <label>Policy Form</label>
        <referenceTo>Policy_Form_Detail__c</referenceTo>
        <relationshipLabel>Policy Form States</relationshipLabel>
        <relationshipName>Filing_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Post_Approval_Filing_Detail__c</fullName>
        <inlineHelpText>Enter the informational filing State Id, date of informational filing submission, close date of informational filing, informational filing details, and anything relevant to understand this post-approval filing.</inlineHelpText>
        <label>Post-Approval Filing Detail</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Approval_Filing_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ensure that when this post-approval filing is closed, uncheck this box.</inlineHelpText>
        <label>Post-Approval Filing In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOV_Variation_Description__c</fullName>
        <label>SOV Variation Description</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <inlineHelpText>What is the situs/compact state for the dependency?</inlineHelpText>
        <label>Situs/Compact State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Approval_Date__c</fullName>
        <inlineHelpText>This should be completed if Exempt or Approved.</inlineHelpText>
        <label>State Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Filing_ID__c</fullName>
        <label>State Filing ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <formula>CASE(  State__c  , 
&quot;AL&quot;,&quot;Alabama&quot;, 
&quot;AK&quot;,&quot;Alaska&quot;, 
&quot;AZ&quot;,&quot;Arizona&quot;, 
&quot;AR&quot;,&quot;Arkansas&quot;,
&quot;CA&quot;,&quot;California&quot;,
&quot;CO&quot;,&quot;Colorado&quot;,
&quot;CT&quot;,&quot;Connecticut&quot;,
&quot;DC&quot;,&quot;District of Columbia&quot;,
&quot;DE&quot;,&quot;Delaware&quot;,
&quot;FL&quot;,&quot;Florida&quot;,
&quot;GA&quot;,&quot;Georgia&quot;,
&quot;HI&quot;,&quot;Hawaii&quot;,
&quot;ID&quot;,&quot;Idaho&quot;,
&quot;IL&quot;,&quot;Illinois&quot;,
&quot;IN&quot;,&quot;Indiana&quot;,
&quot;IA&quot;,&quot;Iowa&quot;,
&quot;KS&quot;,&quot;Kansas&quot;,
&quot;KY&quot;,&quot;Kentucky&quot;,
&quot;LA&quot;,&quot;Louisiana&quot;,
&quot;ME&quot;,&quot;Maine&quot;,
&quot;MD&quot;,&quot;Maryland&quot;,
&quot;MA&quot;,&quot;Massachusetts&quot;,
&quot;MI&quot;,&quot;Michigan&quot;,
&quot;MN&quot;,&quot;Minnesota&quot;,
&quot;MS&quot;,&quot;Mississippi&quot;,
&quot;MO&quot;,&quot;Missouri&quot;,
&quot;MT&quot;,&quot;Montana&quot;,
&quot;NE&quot;,&quot;Nebraska&quot;,
&quot;NV&quot;,&quot;Nevada&quot;,
&quot;NH&quot;,&quot;New Hampshire&quot;,
&quot;NJ&quot;,&quot;New Jersey&quot;,
&quot;NM&quot;,&quot;New Mexico&quot;,
&quot;NY&quot;,&quot;New York&quot;,
&quot;NC&quot;,&quot;North Carolina&quot;,
&quot;ND&quot;,&quot;North Dakota&quot;,
&quot;OH&quot;,&quot;Ohio&quot;,
&quot;OK&quot;,&quot;Oklahoma&quot;,
&quot;OR&quot;,&quot;Oregon&quot;,
&quot;PA&quot;,&quot;Pennsylvania&quot;,
&quot;PR&quot;,&quot;Puerto Rico&quot;,
&quot;RI&quot;,&quot;Rhode Island&quot;,
&quot;SC&quot;,&quot;South Carolina&quot;,
&quot;SD&quot;,&quot;South Dakota&quot;,
&quot;TN&quot;,&quot;Tennessee&quot;,
&quot;TX&quot;,&quot;Texas&quot;,
&quot;UT&quot;,&quot;Utah&quot;,
&quot;VT&quot;,&quot;Vermont&quot;,
&quot;VA&quot;,&quot;Virginia&quot;,
&quot;WA&quot;,&quot;Washington&quot;,
&quot;WV&quot;,&quot;West Virginia&quot;,
&quot;WI&quot;,&quot;Wisconsin&quot;,
&quot;WY&quot;,&quot;Wyoming&quot;,
&quot;IC&quot;,&quot;Compact&quot;,
null)</formula>
        <label>State Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_to_State_Date__c</fullName>
        <label>Submitted to State Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_File_Date__c</fullName>
        <label>Target File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Variation_Pages__c</fullName>
        <label>Variation Pages</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Policy Form State</label>
    <listViews>
        <fullName>API_1074_01_15_Form_Filings</fullName>
        <columns>NAME</columns>
        <columns>State_Name__c</columns>
        <columns>Filing_Strategy__c</columns>
        <columns>Filing_Status__c</columns>
        <columns>Submitted_to_State_Date__c</columns>
        <columns>Objection_Deadline_Date__c</columns>
        <columns>State_Approval_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>API-1074(01-15)</value>
        </filters>
        <label>API-1074(01-15) Form Filings</label>
    </listViews>
    <listViews>
        <fullName>API_1074_01_15_Form_Filings_Active</fullName>
        <columns>NAME</columns>
        <columns>State_Name__c</columns>
        <columns>Filing_Strategy__c</columns>
        <columns>Filing_Status__c</columns>
        <columns>Submitted_to_State_Date__c</columns>
        <columns>Objection_Deadline_Date__c</columns>
        <columns>Filing_Notes_Status_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>API-1074(01-15)</value>
        </filters>
        <filters>
            <field>Filing_Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn,Closed,Approved,Not Filing,Pending Compact,Pending Group</value>
        </filters>
        <filters>
            <field>Filing_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved - Dependent Group,Approved - Compact,Approved - Exempt</value>
        </filters>
        <label>API-1074(01-15) Form Filings - Active</label>
    </listViews>
    <listViews>
        <fullName>ARI_2002_10_18_Form_Filings</fullName>
        <columns>NAME</columns>
        <columns>State_Name__c</columns>
        <columns>State_Filing_ID__c</columns>
        <columns>Filing_Strategy__c</columns>
        <columns>Filing_Status__c</columns>
        <columns>Submitted_to_State_Date__c</columns>
        <columns>Objection_Deadline_Date__c</columns>
        <columns>Objection_Response_Date__c</columns>
        <columns>State_Approval_Date__c</columns>
        <columns>Is_Feature_Variation__c</columns>
        <columns>Is_Form_Variation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ARI-2002(10-18)</value>
        </filters>
        <label>ARI-2002(10-18) Form Filings</label>
    </listViews>
    <listViews>
        <fullName>ARI_2002_10_18_Form_Filings_Active</fullName>
        <columns>NAME</columns>
        <columns>State_Name__c</columns>
        <columns>Filing_Strategy__c</columns>
        <columns>Filing_Status__c</columns>
        <columns>Submitted_to_State_Date__c</columns>
        <columns>Objection_Deadline_Date__c</columns>
        <columns>Filing_Notes_Status_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ARI-2002(10-18)</value>
        </filters>
        <filters>
            <field>Filing_Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn,Closed,Approved,Not Filing,Pending Compact,Pending Group</value>
        </filters>
        <filters>
            <field>Filing_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved - Dependent Group,Approved - Compact,Approved - Exempt</value>
        </filters>
        <label>ARI-2002(10-18) Form Filings - Active</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Filing_Status__c</columns>
        <columns>Filing_Strategy__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Variation_Pages__c</columns>
        <columns>Is_Actuarial_Memo_Variation__c</columns>
        <columns>Is_Feature_Variation__c</columns>
        <columns>Is_Form_Variation__c</columns>
        <columns>Is_SOV_Variation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EMGWB_Rider_Policy_Form_Filings</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 or 5) and 6</booleanFilter>
        <columns>NAME</columns>
        <columns>State_Name__c</columns>
        <columns>Filing_Strategy__c</columns>
        <columns>Filing_Status__c</columns>
        <columns>Submitted_to_State_Date__c</columns>
        <columns>Objection_Deadline_Date__c</columns>
        <columns>State_Approval_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ARI-1065(07-18)</value>
        </filters>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ARI-1065(07-18)FL</value>
        </filters>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ICC18-1065(04-18)</value>
        </filters>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ARI-1065(07-18)GMWB</value>
        </filters>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ARI-1065(07-18)EGMWB</value>
        </filters>
        <filters>
            <field>Filing_Strategy__c</field>
            <operation>notEqual</operation>
            <value>Not Filing</value>
        </filters>
        <label>EGMWB Rider Policy Form Filings</label>
    </listViews>
    <listViews>
        <fullName>EMGWB_Rider_Policy_Form_Filings_Active</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 or 7) and 5 and 6</booleanFilter>
        <columns>NAME</columns>
        <columns>State_Name__c</columns>
        <columns>Filing_Strategy__c</columns>
        <columns>Filing_Status__c</columns>
        <columns>Objection_Deadline_Date__c</columns>
        <columns>Submitted_to_State_Date__c</columns>
        <columns>Filing_Notes_Status_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ARI-1065(07-18)</value>
        </filters>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ARI-1065(07-18)FL</value>
        </filters>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ICC18-1065(04-18)</value>
        </filters>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ARI-1065(07-18)GMWB</value>
        </filters>
        <filters>
            <field>Filing_Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn,Closed,Approved,Not Filing,Pending Compact,Pending Group</value>
        </filters>
        <filters>
            <field>Filing_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved - Dependent Group,Approved - Compact,Approved - Exempt</value>
        </filters>
        <filters>
            <field>Policy_Form__c</field>
            <operation>equals</operation>
            <value>ARI-1065(07-18)EGMWB</value>
        </filters>
        <label>EGMWB Rider Policy Form Filings_Active</label>
    </listViews>
    <listViews>
        <fullName>Filings_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>State_Name__c</columns>
        <columns>Filing_Strategy__c</columns>
        <columns>Filing_Status__c</columns>
        <columns>Submitted_to_State_Date__c</columns>
        <columns>Objection_Deadline_Date__c</columns>
        <columns>Filing_Notes_Status_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_to_State_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Filing_Status__c</field>
            <operation>notEqual</operation>
            <value>Withdrawn,Closed,Approved</value>
        </filters>
        <filters>
            <field>Filing_Strategy__c</field>
            <operation>notEqual</operation>
            <value>Compact Dependent,Group Dependent,Not Filing</value>
        </filters>
        <label>Filings In Progress</label>
    </listViews>
    <nameField>
        <label>Policy Form State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Form States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Approval_Date_is_required</fullName>
        <active>false</active>
        <description>The approval date is required and</description>
        <errorConditionFormula>AND (OR( ISPICKVAL(Filing_Strategy__c, &apos;Group Filing&apos;),
      ISPICKVAL(Filing_Strategy__c, &apos;Compact Filing&apos;)
     ),
     ISBLANK( State_Approval_Date__c )
     )</errorConditionFormula>
        <errorDisplayField>Filing_Strategy__c</errorDisplayField>
        <errorMessage>Approval date is required for Group filing and Compact filing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Approved_Policy_State</fullName>
        <active>true</active>
        <description>Once the filing_status__c is approved you cannot edit it</description>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Filing_Status__c), &quot;Approved&quot;),
    ISCHANGED(Filing_Status__c)
)</errorConditionFormula>
        <errorDisplayField>Filing_Status__c</errorDisplayField>
        <errorMessage>Once the status is approved you cannot modify the status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Feature_Variation_Description_Required</fullName>
        <active>true</active>
        <description>Variation Description is required if Is Variation is checked.</description>
        <errorConditionFormula>AND(
$User.ByPassValidation__c == false,      
Is_Feature_Variation__c  = true,
    LEN(  Feature_Variation_Description__c ) = 0)</errorConditionFormula>
        <errorDisplayField>Feature_Variation_Description__c</errorDisplayField>
        <errorMessage>If Is Feature Variation is checked, then Feature Variation Description must be filled out.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Form_Variation_Description_Required</fullName>
        <active>true</active>
        <description>Variation Description is required if Is Variation is checked.</description>
        <errorConditionFormula>AND(
    $User.ByPassValidation__c == false,
    Is_Form_Variation__c = true,
    LEN( Form_Variation_Description__c) = 0)</errorConditionFormula>
        <errorDisplayField>Form_Variation_Description__c</errorDisplayField>
        <errorMessage>If Is Form Variation is checked, then Form Variation Description must be filled out.</errorMessage>
    </validationRules>
</CustomObject>